--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,20 @@ language: php
 
 sudo: false
 
-# php:
+php:
+  - 5.4
 #   - 5.6
 #   - 7.2
 #   - 7.3
 #   - 7.4snapshot
+
+env:
+  global:
+    - DEFAULT_COMPOSER_FLAGS="--no-interaction --no-ansi --no-progress --no-suggest"
+
+install:
+#   travis_retry ./build/tools/composer update $DEFAULT_COMPOSER_FLAGS
+  travis_retry composer update
 
 script:
   phpunit --coverage-clover=coverage.xml
